# data-profiler

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: audit-claude-md.md  audit-docs.md  backup-files.md  check-context.md  list-standards.md  load-architecture-standards.md  load-backend-standards.md  load-frontend-standards.md  load-standard.md  rationalize-md-files.md  restore-session-context.md  run-eod-history.md  save-session-context.md  slash-command-best-practices.md  update-docs.md
.claude/docs/: CLAUDE_USER_GUIDE.md
.copilot/: config.json
.github/workflows/: ci.yml
.scratchpad/: SCRATCHPAD.md
config/: config.toml
docs/: DATA_PROFILER_BRD.md  IMPLEMENTATION_PLAN.md  TECHNICAL_DESIGN.md  USAGE.md
src/data_profiler/: __init__.py  profiler.py
src/data_profiler/cli/: __init__.py  common.py  formatters.py  main.py
src/data_profiler/config/: __init__.py  loader.py  schema.py
src/data_profiler/core/: __init__.py  file_profiler.py  profiler.py  schema.py
src/data_profiler/grouping/: __init__.py  cross_file.py  engine.py  protection.py  stats.py
src/data_profiler/models/: __init__.py  grouping.py  profile.py  relationships.py
src/data_profiler/output/: __init__.py  base.py  html_formatter.py  html_ydata.py  json_formatter.py  markdown_formatter.py
src/data_profiler/profilers/: __init__.py  base.py  categorical.py  datetime.py  factory.py  numeric.py  string.py
src/data_profiler/readers/: __init__.py  backend.py  base.py  csv_reader.py  factory.py  json_reader.py  parquet_reader.py
src/data_profiler/relationships/: __init__.py  detector.py  graph.py  hints.py  patterns.py
tests/: conftest.py  test_basic.py  test_cli.py  test_models.py
tests/fixtures/: sample.csv  sample.jsonl
tests/integration/: __init__.py
tests/integration/cli/: test_group_command.py
tests/integration/grouping/: __init__.py  test_cross_file.py
tests/integration/relationships/: __init__.py  test_detector_integration.py  test_graph_integration.py  test_hints_integration.py
tests/smoke/: __init__.py  test_config_precedence.py  test_end_to_end.py  test_error_handling.py  test_large_files.py
tests/unit/: __init__.py
tests/unit/config/: test_schema.py
tests/unit/core/: test_core_polars.py  test_file_profiler.py  test_profiler.py  test_schema.py
tests/unit/grouping/: __init__.py  test_engine.py  test_protection.py  test_stats.py
tests/unit/output/: __init__.py  test_formatters.py
tests/unit/profilers/: __init__.py  test_categorical.py  test_datetime.py  test_factory.py  test_numeric.py  test_profilers_polars.py  test_string.py
tests/unit/readers/: __init__.py  test_backend.py  test_backend_extended.py  test_csv_reader.py  test_factory.py  test_json_reader.py  test_parquet_reader.py  test_readers_polars.py
tests/unit/relationships/: __init__.py  test_detector.py  test_graph.py  test_hints.py  test_patterns.py
tools/: check_dist_versions.py
